Bugfixes minori e aggiunte descrizioni C# e JavaScript nella sezione Exercism

--- a/exercism/exercism.html
+++ b/exercism/exercism.html
@@ -32,7 +32,7 @@
     <div class="mainPage">
       <h2 class="mainTitle">I miei esercizi su <a href="https://exercism.io/" target="_blank">exercism.io</a></h2>
       <div id="allLanguagesContainer">
-        <a class="languageContainer makeContainerShorter shorterContainer" onmouseover="containerHeight(this); containerLanguageDescriptionOn(this);" onmouseout="containerHeight(this); containerLanguageDescriptionOff(this);" href="exercism/cpp.html"">
+        <a class="languageContainer makeContainerShorter shorterContainer" onmouseover="containerHeight(this); containerLanguageDescriptionOn(this);" onmouseout="containerHeight(this); containerLanguageDescriptionOff(this);" href="exercism/cpp.html">
             <p class="languageName slideToDown makeAppear appear">C++</p>
             <p class="languageDescriptionTitle slideToUp makeDisappear disappear">C++</p>
             <p class="languageDescription slideToUp makeDisappear disappear">
@@ -51,42 +51,30 @@
 
             </p>
         </a>
-        <a class="languageContainer makeContainerShorter shorterContainer" onmouseover="containerHeight(this); containerLanguageDescriptionOn(this);" onmouseout="containerHeight(this); containerLanguageDescriptionOff(this);" href="exercism/cpp.html"">
-            <p class="languageName slideToDown makeAppear appear">C++</p>
-            <p class="languageDescriptionTitle slideToUp makeDisappear disappear">C++</p>
+        <a class="languageContainer makeContainerShorter shorterContainer" onmouseover="containerHeight(this); containerLanguageDescriptionOn(this);" onmouseout="containerHeight(this); containerLanguageDescriptionOff(this);" href="exercism/cpp.html">
+            <p class="languageName slideToDown makeAppear appear">C#</p>
+            <p class="languageDescriptionTitle slideToUp makeDisappear disappear">C#</p>
             <p class="languageDescription slideToUp makeDisappear disappear">
-              C++ supports procedural, object-oriented, functional and generic programming. Compilers for C++ are available for essentially every platform, including Windows, Mac OS, and Linux.<br><br>
+              C# is a multi-paradigm, statically-typed programming language with object-oriented, declarative, functional, generic, lazy, integrated querying features and type inference.<br>
 
-              Key Benefits:<br><br>
+Statically-typed means that identifiers have a type set at compile time--like those in Java, C++ or Haskell--instead of holding data of any type like those in Python, Ruby or JavaScript.<br>
 
-                  Type safety: Encapsulate necessary unsafe operations<br>
-                  Resource safety: Not all resource management is managing memory<br>
-                  Performance: For some parts of almost all systems, it's important<br>
-                  Predictability: For hard and soft real-time systems<br>
-                  Teachability: Complexity of code should be proportional to the complexity of the task<br>
-                  Readability: People and machines ("analyzability")<br>
-                  Direct map to hardware: of instructions and fundamental data types<br>
-                  Zero-overhead abstraction: Classes with constructors and destructors, inheritance, generic programming, functional programming techniques
+Object-oriented means that C# provides imperative class-based objects with features such as single inheritance, interfaces and encapsulation.<br>
+
+Declarative means programming what is to be done, as opposed to how it is done (a.k.a imperative programming) (which is an implementation detail which can distract from the domain or business logic).<br>
+
+Integrated Querying means the language feature called LINQ "Language-Integrated Query", which enables lazy querying directly within the language, not only its own objects but, also, external data sources through formats such as XML, JSON, SQL, NoSQL DBs and event streams.<br>
+
+Type inference means that the compiler will often figure out the type of an identifier by itself so you don't have to specify it. Scala and F# both do this.<br>
+
 
             </p>
         </a>
-        <a class="languageContainer makeContainerShorter shorterContainer" onmouseover="containerHeight(this); containerLanguageDescriptionOn(this);" onmouseout="containerHeight(this); containerLanguageDescriptionOff(this);" href="exercism/cpp.html"">
-            <p class="languageName slideToDown makeAppear appear">C++</p>
-            <p class="languageDescriptionTitle slideToUp makeDisappear disappear">C++</p>
+        <a class="languageContainer makeContainerShorter shorterContainer" onmouseover="containerHeight(this); containerLanguageDescriptionOn(this);" onmouseout="containerHeight(this); containerLanguageDescriptionOff(this);" href="exercism/cpp.html">
+            <p class="languageName slideToDown makeAppear appear">JavaScript</p>
+            <p class="languageDescriptionTitle slideToUp makeDisappear disappear">JavaScript</p>
             <p class="languageDescription slideToUp makeDisappear disappear">
-              C++ supports procedural, object-oriented, functional and generic programming. Compilers for C++ are available for essentially every platform, including Windows, Mac OS, and Linux.<br><br>
-
-              Key Benefits:<br><br>
-
-                  Type safety: Encapsulate necessary unsafe operations<br>
-                  Resource safety: Not all resource management is managing memory<br>
-                  Performance: For some parts of almost all systems, it's important<br>
-                  Predictability: For hard and soft real-time systems<br>
-                  Teachability: Complexity of code should be proportional to the complexity of the task<br>
-                  Readability: People and machines ("analyzability")<br>
-                  Direct map to hardware: of instructions and fundamental data types<br>
-                  Zero-overhead abstraction: Classes with constructors and destructors, inheritance, generic programming, functional programming techniques
-
+              ECMAScript is the standard that defines JavaScript, a programming language that allows web pages to be dynamic. It is an interpreted language, which means that it doesn't need to be compiled: instead the interpreter (such as a web browser) will parse the code and turn it into code that their machine can run - suitable for creating dynamic websites that can run on any browser* on any computer*!
             </p>
         </a>
       </div>
