--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <p class="projectDescription slideToUp makeDisappear disappear">Una collezione degli esercizi che ho svolto sulla piattaforma exercism.io</p>
             <p class="projectLanguages slideToUp makeDisappear disappear">C++, C#, JavaScript</p>
         </div>
-        <a class="projectContainer" href="https://github.com/less-hub/less-Pokemulator" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
+        <a class="projectContainer" href="https://github.com/less-hub/less-Pokemulator#table-of-contents" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
             <p class="projectName slideToDown makeAppear appear">Emulatore Pokèmon</p>
             <p class="projectDescription slideToUp makeDisappear disappear">Un semplice emulatore Pokèmon. Ancora in fase di sviluppo.</p>
             <p class="projectLanguages slideToUp makeDisappear disappear">Ruby, Ruby2d, Gosu</p>
