Fixato bug visuale JS in Exercism

--- a/exercism/exercism.html
+++ b/exercism/exercism.html
@@ -74,7 +74,7 @@ Type inference means that the compiler will often figure out the type of an iden
             <p class="languageName slideToDown makeAppear appear">JavaScript</p>
             <p class="languageDescriptionTitle slideToUp makeDisappear disappear">JavaScript</p>
             <p class="languageDescription slideToUp makeDisappear disappear">
-              ECMAScript is the standard that defines JavaScript, a programming language that allows web pages to be dynamic. It is an interpreted language, which means that it doesn't need to be compiled: instead the interpreter (such as a web browser) will parse the code and turn it into code that their machine can run - suitable for creating dynamic websites that can run on any browser* on any computer*!
+              ECMAScript is the standard that defines JavaScript, a programming language that allows web pages to be dynamic. It is an interpreted language, which means that it doesn't need to be compiled: instead the interpreter (such as a web browser) will parse the code and turn it into code that their machine can run - suitable for creating dynamic websites that can run on any browser on any computer!
             </p>
         </a>
       </div>
