Aggiunti link exercism C++

--- a/exercism/exercism/cpp.html
+++ b/exercism/exercism/cpp.html
@@ -37,6 +37,91 @@
             <p class="projectDescription slideToUp makeDisappear disappear">Given a year, report if this is a leap year.</p>
         </a>
 
+        <a class="projectContainer" href="https://exercism.io/tracks/cpp/exercises/reverse-string/solutions/5860a5efae444380be5d772a4fafbf1b" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
+            <p class="projectName slideToDown makeAppear appear">Reverse String</p>
+            <p class="projectDescription slideToUp makeDisappear disappear">Reverse a string.</p>
+        </a>
+
+        <a class="projectContainer" href="https://exercism.io/tracks/cpp/exercises/space-age/solutions/f21f0e20a721413aac31dd918d379605" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
+            <p class="projectName slideToDown makeAppear appear">Space Age</p>
+            <p class="projectDescription slideToUp makeDisappear disappear">Given an age in seconds, calculate how old someone is in terms of a given planet's solar years.</p>
+        </a>
+
+        <a class="projectContainer" href="https://exercism.io/tracks/cpp/exercises/triangle/solutions/3fe4a218efb7471ab69e2a6b931d4e65" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
+            <p class="projectName slideToDown makeAppear appear">Triangle</p>
+            <p class="projectDescription slideToUp makeDisappear disappear">Determine if a triangle is equilateral, isoceles, scalene or degenerate.</p>
+        </a>
+
+        <a class="projectContainer" href="https://exercism.io/my/solutions/f5d60201b8ef4b93b7cf1e80d4deb9a1" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
+            <p class="projectName slideToDown makeAppear appear">Grains</p>
+            <p class="projectDescription slideToUp makeDisappear disappear">Calculate the number of grains of wheat on a chessboard given that the number on each square doubles.</p>
+        </a>
+
+        <a class="projectContainer" href="https://exercism.io/my/solutions/8e5fbaeb5cb34cc682842ef745e55c2b" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
+            <p class="projectName slideToDown makeAppear appear">Raindrops</p>
+            <p class="projectDescription slideToUp makeDisappear disappear">Convert a number to string, the content of which depends on the number's factor</p>
+        </a>
+
+        <a class="projectContainer" href="https://exercism.io/my/solutions/8ff945ff4640419883a487f8ec9f1dae" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
+            <p class="projectName slideToDown makeAppear appear">Pangram</p>
+            <p class="projectDescription slideToUp makeDisappear disappear">Determine if a sentence is pangram.</p>
+        </a>
+
+        <a class="projectContainer" href="https://exercism.io/tracks/cpp/exercises/isogram/solutions/82c0ad21d0ad4da58269029f4b26c445" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
+            <p class="projectName slideToDown makeAppear appear">Isogram</p>
+            <p class="projectDescription slideToUp makeDisappear disappear">Determine if a word or phrase is an isogram.</p>
+        </a>
+
+        <a class="projectContainer" href="https://exercism.io/tracks/cpp/exercises/scrabble-score/solutions/12c42bf6391e4046858c34aa9a63c57b" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
+            <p class="projectName slideToDown makeAppear appear">Scrabble Score</p>
+            <p class="projectDescription slideToUp makeDisappear disappear">Given a word, compute the scrabble score for that word.</p>
+        </a>
+
+        <a class="projectContainer" href="https://exercism.io/tracks/cpp/exercises/binary/solutions/035525703a4440b3a6f4013c3691d221" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
+            <p class="projectName slideToDown makeAppear appear">Binary</p>
+            <p class="projectDescription slideToUp makeDisappear disappear">Convert a binary number, represented as a string (e.g. '101010'), to its decimal equivalent using first principles.</p>
+        </a>
+
+        <a class="projectContainer" href="https://exercism.io/tracks/cpp/exercises/pascals-triangle/solutions/8ca006ea94cb40c9a6a157feb466123f" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
+            <p class="projectName slideToDown makeAppear appear">Pascal's Triangle</p>
+            <p class="projectDescription slideToUp makeDisappear disappear">Compute Pascal's triangle up to a given number of rows.</p>
+        </a>
+
+        <a class="projectContainer" href="https://exercism.io/tracks/cpp/exercises/all-your-base/solutions/9c0eb7591ce54de68fb4d7091c80b426" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
+            <p class="projectName slideToDown makeAppear appear">All Your Base</p>
+            <p class="projectDescription slideToUp makeDisappear disappear">Convert a number, represented as a sequence of digits in one base, to any other base.</p>
+        </a>
+
+        <a class="projectContainer" href="https://exercism.io/tracks/cpp/exercises/hamming/solutions/1760a13721f44072b7c809ed96e26a69" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
+            <p class="projectName slideToDown makeAppear appear">Hamming</p>
+            <p class="projectDescription slideToUp makeDisappear disappear">Calculate the Hamming Distance between two DNA strands.</p>
+        </a>
+
+        <a class="projectContainer" href="https://exercism.io/tracks/cpp/exercises/difference-of-squares/solutions/90ee4ef45b394af38db84b2d7f5e6d21" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
+            <p class="projectName slideToDown makeAppear appear">Difference Of Squares</p>
+            <p class="projectDescription slideToUp makeDisappear disappear">Find the difference between the square of the sum and the sum of the squares of the first N natural numbers.</p>
+        </a>
+
+        <a class="projectContainer" href="https://exercism.io/tracks/cpp/exercises/nucleotide-count/solutions/53b3792f71854664ae3bf7cf23f3699c" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
+            <p class="projectName slideToDown makeAppear appear">Nucleotide Count</p>
+            <p class="projectDescription slideToUp makeDisappear disappear">Given a single stranded DNA string, compute how many times each nucleotide occurs in the string.</p>
+        </a>
+
+        <a class="projectContainer" href="https://exercism.io/tracks/cpp/exercises/grade-school/solutions/d94a85e6ba3b4b1097c28fd19f021918" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
+            <p class="projectName slideToDown makeAppear appear">Grade School</p>
+            <p class="projectDescription slideToUp makeDisappear disappear">Given students' names along with the grade that they are in, create a roster for the school.</p>
+        </a>
+
+        <a class="projectContainer" href="https://exercism.io/tracks/cpp/exercises/rna-transcription/solutions/67d6510cf75f4122a5a987411030b160" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
+            <p class="projectName slideToDown makeAppear appear">RNA Transcription</p>
+            <p class="projectDescription slideToUp makeDisappear disappear">Given a DNA strand, return its RNA complement (per RNA transcription).</p>
+        </a>
+
+        <a class="projectContainer" href="https://exercism.io/tracks/cpp/exercises/sieve/solutions/bd237eb4783e4f1f8f62fc3f444813b3" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
+            <p class="projectName slideToDown makeAppear appear">Sieve</p>
+            <p class="projectDescription slideToUp makeDisappear disappear">Use the Sieve of Eratosthenes to find all the primes from 2 up to a given number.</p>
+        </a>
+
       </div>
     </div>
   <script src="../../public/js/index.js"></script>
