--- a/exercism/exercism/csharp.html
+++ b/exercism/exercism/csharp.html
@@ -32,14 +32,165 @@
     <div class="mainPage">
       <h2 class="mainTitle">I miei esercizi C#</h2>
       <div id="allProjectsContainer">
-        <a class="projectContainer" href="https://exercism.io/tracks/cpp/exercises/leap/solutions/cf6231784ad347dab4505c9b728f76f9" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
+        <a class="projectContainer" href="https://exercism.io/tracks/csharp/exercises/strain/solutions/d8620a30eb7c4770954274e27c62f546" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
+            <p class="projectName slideToDown makeAppear appear">Strain</p>
+            <p class="projectDescription slideToUp makeDisappear disappear">Implement the keep and discard operation on collections.</p>
+        </a>
+        <a class="projectContainer" href="https://exercism.io/tracks/csharp/exercises/robot-name/solutions/c127e0995b244eccafb5af83f653a185" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
+            <p class="projectName slideToDown makeAppear appear">Robot Name</p>
+            <p class="projectDescription slideToUp makeDisappear disappear">Manage robot factory settings.</p>
+        </a>
+        <a class="projectContainer" href="https://exercism.io/tracks/csharp/exercises/accumulate/solutions/752c504659cf45b5b911771feb06ca83" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
+            <p class="projectName slideToDown makeAppear appear">Accumulate</p>
+            <p class="projectDescription slideToUp makeDisappear disappear">Implement the accumulate operation.</p>
+        </a>
+        <a class="projectContainer" href="https://exercism.io/tracks/csharp/exercises/difference-of-squares/solutions/cfe45c8550fb49e1bcbcb2fc25bfe249" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
+            <p class="projectName slideToDown makeAppear appear">Difference of Squares</p>
+            <p class="projectDescription slideToUp makeDisappear disappear">Find the difference between the square of the sum and the sum of the squares of the first N natural numbers.</p>
+        </a>
+        <a class="projectContainer" href="https://exercism.io/tracks/csharp/exercises/nucleotide-count/solutions/ca308dc300ab4affbe5fe3c8007f0e30" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
+            <p class="projectName slideToDown makeAppear appear">Nucleotide Count</p>
+            <p class="projectDescription slideToUp makeDisappear disappear">Given a single stranded DNA string, compute how many times each nucleotide occurs in the string.</p>
+        </a>
+        <a class="projectContainer" href="https://exercism.io/tracks/csharp/exercises/raindrops/solutions/448eb8b94b8e46b0a910baaf1b0c568c" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
+            <p class="projectName slideToDown makeAppear appear">Raindrops</p>
+            <p class="projectDescription slideToUp makeDisappear disappear">Convert a number to a string, the contents of which depend on the number's factors.</p>
+        </a>
+        <a class="projectContainer" href="https://exercism.io/tracks/csharp/exercises/rational-numbers/solutions/f2a5f7777d984a6bae63a469dcea6ca0" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
+            <p class="projectName slideToDown makeAppear appear">Rational Numbers</p>
+            <p class="projectDescription slideToUp makeDisappear disappear">A rational number is defined as the quotient of two integers a and b, called the numerator and denominator, respectively, where b != 0.</p>
+        </a>
+        <a class="projectContainer" href="https://exercism.io/tracks/csharp/exercises/triangle/solutions/93cef1cfbe834f22bc3913ae210c42e3" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
+            <p class="projectName slideToDown makeAppear appear">Triangle</p>
+            <p class="projectDescription slideToUp makeDisappear disappear">Determine if a triangle is equilateral, isosceles, or scalene.</p>
+        </a>
+        <a class="projectContainer" href="https://exercism.io/tracks/csharp/exercises/complex-numbers/solutions/44b136188bd34ae48c508683e8b94a4f" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
+            <p class="projectName slideToDown makeAppear appear">Complex Numbers</p>
+            <p class="projectDescription slideToUp makeDisappear disappear">A complex number is a number in the form a + b * i where a and b are real and i satisfies i^2 = -1.</p>
+        </a>
+        <a class="projectContainer" href="https://exercism.io/tracks/csharp/exercises/darts/solutions/59c0e1b15e0f4acb9578b1a105bab145" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
+            <p class="projectName slideToDown makeAppear appear">Darts</p>
+            <p class="projectDescription slideToUp makeDisappear disappear">Write a function that returns the earned points in a single toss of a Darts game.</p>
+        </a>
+        <a class="projectContainer" href="https://exercism.io/tracks/csharp/exercises/roman-numerals/solutions/6f581ee924b6474cb5b4f5a421e18d2c" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
+            <p class="projectName slideToDown makeAppear appear">Roman Numerals</p>
+            <p class="projectDescription slideToUp makeDisappear disappear">Write a function to convert from normal numbers to Roman Numerals.</p>
+        </a>
+        <a class="projectContainer" href="https://exercism.io/tracks/csharp/exercises/high-scores/solutions/8d46e4c7d54c4a85b3a7fddc3c7415d9" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
+            <p class="projectName slideToDown makeAppear appear">High Scores</p>
+            <p class="projectDescription slideToUp makeDisappear disappear">Manage a game player's High Score list.</p>
+        </a>
+        <a class="projectContainer" href="https://exercism.io/tracks/csharp/exercises/armstrong-numbers/solutions/ebd7516a6c9040ceae69184b01a2be0c" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
+            <p class="projectName slideToDown makeAppear appear">Armstrong Numbers</p>
+            <p class="projectDescription slideToUp makeDisappear disappear">An Armstrong number is a number that is the sum of its own digits each raised to the power of the number of digits.</p>
+        </a>
+        <a class="projectContainer" href="https://exercism.io/tracks/csharp/exercises/proverb/solutions/f0c061b252ac4f31b573e1383f018508" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
+            <p class="projectName slideToDown makeAppear appear">Proverb</p>
+            <p class="projectDescription slideToUp makeDisappear disappear">For want of a horseshoe nail, a kingdom was lost, or so the saying goes.</p>
+        </a>
+        <a class="projectContainer" href="https://exercism.io/tracks/csharp/exercises/beer-song/solutions/4d7e4073e3ef4157b165240db676116d" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
+            <p class="projectName slideToDown makeAppear appear">Beer Song</p>
+            <p class="projectDescription slideToUp makeDisappear disappear">Recite the lyrics to that beloved classic, that field-trip favorite: 99 Bottles of Beer on the Wall.</p>
+        </a>
+        <a class="projectContainer" href="https://exercism.io/tracks/csharp/exercises/house/solutions/79f50d010b6f4f169ff8c4ada6b9aac2" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
+            <p class="projectName slideToDown makeAppear appear">House</p>
+            <p class="projectDescription slideToUp makeDisappear disappear">Recite the nursery rhyme 'This is the House that Jack Built'.</p>
+        </a>
+        <a class="projectContainer" href="https://exercism.io/tracks/csharp/exercises/hamming/solutions/dc32e441e76d437b9bcf89c8da07dc3d" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
+            <p class="projectName slideToDown makeAppear appear">Hamming</p>
+            <p class="projectDescription slideToUp makeDisappear disappear">Calculate the Hamming Distance between two DNA strands.</p>
+        </a>
+        <a class="projectContainer" href="https://exercism.io/tracks/csharp/exercises/pangram/solutions/7e840472b7d04ddcaf636c3df0c32aeb" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
+            <p class="projectName slideToDown makeAppear appear">Pangram</p>
+            <p class="projectDescription slideToUp makeDisappear disappear">Determine if a sentence is pangram.</p>
+        </a>
+        <a class="projectContainer" href="https://exercism.io/tracks/csharp/exercises/two-fer/solutions/5993124f422a400ca16c3e7fbab43e81" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
+            <p class="projectName slideToDown makeAppear appear">TwoFer</p>
+            <p class="projectDescription slideToUp makeDisappear disappear">Two-fer or 2-fer is short for two for one. One for you and one for me.</p>
+        </a>
+        <a class="projectContainer" href="https://exercism.io/tracks/csharp/exercises/acronym/solutions/c8dafbd86ab24b43b6746af20d3e8fa1" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
+            <p class="projectName slideToDown makeAppear appear">Acronym</p>
+            <p class="projectDescription slideToUp makeDisappear disappear">Convert a phrase to its acronym.</p>
+        </a>
+        <a class="projectContainer" href="https://exercism.io/tracks/csharp/exercises/leap/solutions/6b32bf0ca0c048878d2b1cd99869d758" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
             <p class="projectName slideToDown makeAppear appear">Leap</p>
-            <p class="projectDescription slideToUp makeDisappear disappear">Given a year, report if this is a leap year.</p>
+            <p class="projectDescription slideToUp makeDisappear disappear">Given a year, report if it is a leap year.</p>
+        </a>
+        <a class="projectContainer" href="https://exercism.io/tracks/csharp/exercises/protein-translation/solutions/bad1be0557b54a7eb187912f1ce2caf2" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
+            <p class="projectName slideToDown makeAppear appear">Protein Translation</p>
+            <p class="projectDescription slideToUp makeDisappear disappear">Translate RNA sequences into proteins.</p>
+        </a>
+        <a class="projectContainer" href="https://exercism.io/tracks/csharp/exercises/grains/solutions/00f8a246dd7e46038dc4f0648c5409fa" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
+            <p class="projectName slideToDown makeAppear appear">Grains</p>
+            <p class="projectDescription slideToUp makeDisappear disappear">Calculate the number of grains of wheat on a chessboard given that the number on each square doubles.</p>
+        </a>
+        <a class="projectContainer" href="https://exercism.io/tracks/csharp/exercises/perfect-numbers/solutions/db4afd2398e4436697bf1553928b0155" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
+            <p class="projectName slideToDown makeAppear appear">Perfect Numbers</p>
+            <p class="projectDescription slideToUp makeDisappear disappear">Determine if a number is perfect, abundant, or deficient based on Nicomachus' (60 - 120 CE) classification scheme for natural numbers.</p>
+        </a>
+        <a class="projectContainer" href="https://exercism.io/tracks/csharp/exercises/gigasecond/solutions/add24f73f05945088bdd2e13dc82b95e" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
+            <p class="projectName slideToDown makeAppear appear">Gigasecond</p>
+            <p class="projectDescription slideToUp makeDisappear disappear">Given a moment, determine the moment that would be after a gigasecond has passed.</p>
+        </a>
+        <a class="projectContainer" href="https://exercism.io/tracks/csharp/exercises/collatz-conjecture/solutions/800b009b5cf94026b2ca36d2ea9bc6ed" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
+            <p class="projectName slideToDown makeAppear appear">Collatz Conjecture</p>
+            <p class="projectDescription slideToUp makeDisappear disappear">Given a number n, return the number of steps required to reach 1.</p>
+        </a>
+        <a class="projectContainer" href="https://exercism.io/tracks/csharp/exercises/phone-number/solutions/1f51aea7b8584794bd8aa01467d1e262" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
+            <p class="projectName slideToDown makeAppear appear">Phone Number</p>
+            <p class="projectDescription slideToUp makeDisappear disappear">Clean up user-entered phone numbers so that they can be sent SMS messages.</p>
+        </a>
+        <a class="projectContainer" href="https://exercism.io/tracks/csharp/exercises/scrabble-score/solutions/c10e10e071a64e70a78fe875f4a6171f" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
+            <p class="projectName slideToDown makeAppear appear">Scrabble Score</p>
+            <p class="projectDescription slideToUp makeDisappear disappear">Given a word, compute the scrabble score for that word.</p>
+        </a>
+        <a class="projectContainer" href="https://exercism.io/tracks/csharp/exercises/meetup/solutions/3b8f6a5008534d5ebaa3868c27dbc34f" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
+            <p class="projectName slideToDown makeAppear appear">Meetup</p>
+            <p class="projectDescription slideToUp makeDisappear disappear">Calculate the date of meetups.</p>
+        </a>
+        <a class="projectContainer" href="https://exercism.io/tracks/csharp/exercises/resistor-color/solutions/89d77bd9bb854b63b41313d687ca6573" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
+            <p class="projectName slideToDown makeAppear appear">Resistor Colors</p>
+            <p class="projectDescription slideToUp makeDisappear disappear">Resistors have color coded bands, where each color maps to a number. </p>
+        </a>
+        <a class="projectContainer" href="https://exercism.io/tracks/csharp/exercises/etl/solutions/6ac18d6ac960467492075a45a552c645" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
+            <p class="projectName slideToDown makeAppear appear">ETL</p>
+            <p class="projectDescription slideToUp makeDisappear disappear">We are going to do the Transform step of an Extract-Transform-Load.</p>
+        </a>
+        <a class="projectContainer" href="https://exercism.io/tracks/csharp/exercises/isogram/solutions/3c3e3295b4ec48c09b2b20e99d933c59" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
+            <p class="projectName slideToDown makeAppear appear">Isogram</p>
+            <p class="projectDescription slideToUp makeDisappear disappear">Determine if a word or phrase is an isogram.</p>
+        </a>
+        <a class="projectContainer" href="https://exercism.io/tracks/csharp/exercises/largest-series-product/solutions/ac9326777d68431580a31a6a62806c6b" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
+            <p class="projectName slideToDown makeAppear appear">Largest Series Product</p>
+            <p class="projectDescription slideToUp makeDisappear disappear">Given a string of digits, calculate the largest product for a contiguous substring of digits of length n.</p>
+        </a>
+        <a class="projectContainer" href="https://exercism.io/tracks/csharp/exercises/series/solutions/617009029f0b436cb99973d124130ec6" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
+            <p class="projectName slideToDown makeAppear appear">Series</p>
+            <p class="projectDescription slideToUp makeDisappear disappear">Given a string of digits, output all the contiguous substrings of length n in that string in the order that they appear.</p>
+        </a>
+        <a class="projectContainer" href="https://exercism.io/tracks/csharp/exercises/prime-factors/solutions/04817f55927744b8b49549e3fcc812fc" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
+            <p class="projectName slideToDown makeAppear appear">Prime Factors</p>
+            <p class="projectDescription slideToUp makeDisappear disappear">Compute the prime factors of a given natural number.</p>
+        </a>
+        <a class="projectContainer" href="https://exercism.io/tracks/csharp/exercises/pascals-triangle/solutions/b04ed442922b4d1e9eb8d728c974fe5e" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
+            <p class="projectName slideToDown makeAppear appear">Pascal's Triangle</p>
+            <p class="projectDescription slideToUp makeDisappear disappear">Compute Pascal's triangle up to a given number of rows.</p>
+        </a>
+        <a class="projectContainer" href="https://exercism.io/tracks/csharp/exercises/space-age/solutions/702fdea834cb45ce8f77ef691fd4df0e" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
+            <p class="projectName slideToDown makeAppear appear">Space Age</p>
+            <p class="projectDescription slideToUp makeDisappear disappear">Given an age in seconds, calculate how old someone would be on different planets.</p>
+        </a>
+        <a class="projectContainer" href="https://exercism.io/tracks/csharp/exercises/sum-of-multiples/solutions/4755af48e2d64cfb86f83279fd7b8f6f" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
+            <p class="projectName slideToDown makeAppear appear">Sum Of Multiples</p>
+            <p class="projectDescription slideToUp makeDisappear disappear">Given a number, find the sum of all the unique multiples of particular numbers up to but not including that number.</p>
+        </a>
+        <a class="projectContainer" href="https://exercism.io/tracks/csharp/exercises/all-your-base/solutions/b592f05661d548df9a4773c32a5f2c66" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
+            <p class="projectName slideToDown makeAppear appear">All Your Base</p>
+            <p class="projectDescription slideToUp makeDisappear disappear">Convert a number, represented as a sequence of digits in one base, to any other base.</p>
         </a>
 
       </div>
     </div>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="../../public/js/index.js"></script>
   <script src="../../public/js/fade.js"></script>
   <script src="../../public/js/slide.js"></script>
